# NesOxyde

./: .gitignore  Cargo.toml  LICENSE  README.md  log.txt  nintendulator_log.txt
.github/workflows/: rust.yml
src/: apu.rs  bus.rs  cartridge.rs  controller.rs  cpu.rs  decay.rs  filters.rs  joypad.rs  main.rs  nes.rs  ppu.rs  reverb.rs  savable.rs  snake_game.rs  timer.rs
src/apu/: dmc.rs  noise.rs  square.rs  triangle.rs
src/bus/: main_bus.rs  ppu_bus.rs  snake_bus.rs  test_bus.rs
src/cartridge/: mapper.rs  mappers.rs  rom.rs
src/cartridge/mapper/: mapper_0.rs
src/cartridge/mappers/: mapper0.rs  mapper1.rs  mapper10.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper7.rs  mapper9.rs  mapper_0.rs  mapper_2.rs
src/cpu/: addr_modes.rs  instructions.rs
src/filters/: highpass.rs  lowpass.rs
src/nes/: trace.rs
src/ppu/: frame.rs  registers.rs  tile.rs
