[package]
name = "nesoxyde"
version = "0.2.0"
authors = ["Mikastiv <m.leblanc_3@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
lazy_static = "1.4.0"
sdl2 = "0.35.1"
rand = "0.8.3"
spin_sleep = "1.0.0"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
