[package]
name = "nesoxyde"
version = "0.2.1"
authors = ["Mikastiv <m.leblanc_3@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
lazy_static = "1.4"
sdl2 = "0.35"
spin_sleep = "1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[profile.release]
lto = true
